<resources>
    <string name="app_name_full">Evraz Wallet</string>
    <string name="app_name">EVRAZ</string>
    <string name="auth_title" translatable="false">Bitshares blockhain</string>
    <string name="back">back</string>
    <string name="registration">Sign up</string>
    <string name="auth">Log in</string>
    <string name="wallet">Wallet</string>
    <string name="login_description">Application log in is implemented only through Account Model</string>
    <string name="app_description">
        Current mobile application allows to register through Account Model. Account Model enable to manage the account from anywhere, using only password and without loading .bin file.\n\n
        Keys for Account will be received with using your password. They won\'t be saved in browser or central server, that\'s why it is necessary  to make sure that you\'ve recognized the password.\n\n
        Please enter desired account name. This name will be registered openly in blockchain and be the identifier for any of your transactions.\n\n
        The name should include more than 6 characters with dash, numbers and u.c.
    </string>
    <string name="continue_registration">To continue the registration</string>
    <string name="account_name">Account name</string>
    <string name="create_password">Create the password</string>
    <string name="confirm_password">Confirm the password</string>
    <string name="reg_checkbox_1">I realize that I will lose access to my funds if I lose my password пароль </string>
    <string name="reg_checkbox_2">I realize, that nobody can restore my password if I lose or forget it</string>
    <string name="reg_checkbox_3">I wrote down or have saved in the other way my password</string>
    <string name="balance">Balance</string>
    <string name="send">Send</string>
    <string name="exchange">Exchange</string>
    <string name="exchange_title">My markets</string>
    <string name="portfolio">Portfolio</string>
    <string name="open_orders">Open orders</string>
    <string name="position_provision">Position provision</string>
    <string name="transactions">Transactions</string>
    <string name="total_usd">Total: %d %s</string>
    <string name="assets">Assets</string>
    <string name="short_count">Amount</string>
    <string name="usd_rate">Rate (%s)</string>
    <string name="usd_cost">Cost (%s)</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="count">Amount</string>
    <string name="note">Note</string>
    <string name="comission">Commission</string>
    <string name="undo">Undo</string>
    <string name="my_markets">My markets</string>
    <string name="trading_schedule">Trading schedule</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="orders">Orders</string>
    <string name="cancel">Cancel</string>
    <string name="buy_string">%s %s for %s</string>
    <string name="orders_to_buy">Orders to buy</string>
    <string name="orders_to_sell">Orders to sell</string>
    <string name="my_orders">My orders</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up_button">SignUpButtonActivity</string>
    <string name="sign_up_button">LOG IN</string>
    <string name="dummy_content">BitShares Wallet</string>
    <string name="splash_page_message">Safer way for storage and trade</string>
    <string name="about_activity_title">About</string>
    <string name="settings_activity_title">Settings</string>
    <string name="import_activity_title">Import key</string>
    <string name="model_select_activity_title">Log In</string>
    <string name="operation_history_year">%d year ago</string>
    <string name="operation_history_years">%d years ago</string>
    <string name="operation_history_month">%d month ago</string>
    <string name="operation_history_months">%d months ago</string>
    <string name="operation_history_weeks">%d weeks ago</string>
    <string name="operation_history_week">%d week ago</string>
    <string name="operation_history_day">%d day ago</string>
    <string name="operation_history_days">%d days ago</string>
    <string name="operation_history_hours">%d hours ago</string>
    <string name="operation_history_hour">%d hour ago</string>
    <string name="operation_history_minte">%d minute ago</string>
    <string name="operation_history_mintes">%d minutes ago</string>
    <string name="operation_history_seconds">%d seconds ago</string>
    <string name="operation_history_second">%d second ago</string>
    <string name="main_activity_loading">Loading…</string>
    <string name="import_activity_unknown_error">Some error occurred.</string>
    <string name="import_activity_private_key_invalid">Invalid private key.</string>
    <string name="import_activity_account_invalid">The account does not exist.</string>
    <string name="import_activity_account_not_match_key">The account and the private key do not match.</string>
    <string name="import_activity_account_name_invalid">The account name cannot be found.</string>
    <string name="import_activity_connect_failed">Failed to connect to server.</string>
    <string name="import_activity_file_failed">Cannot read content from the file.</string>
    <string name="import_activity_password_invalid">Invalid password.</string>
    <string name="import_activity_file_bin_password_invalid">Invalid wallet file or password.</string>
    <string name="password_confirm_title">Please type your password to confirm the transaction:</string>
    <string name="password_confirm_button_confirm">CONFIRM</string>
    <string name="password_confirm_button_cancel">CANCEL</string>
    <string name="password_invalid">Invalid password.</string>
    <string name="connect_fail_message">Failed to connect to the internet. \nPlease retry after you have turned on WIFI or cellular.</string>
    <string name="connect_fail_dialog_retry">Retry</string>
    <string name="log_out_dialog_message">Are you sure you want to log out?</string>
    <string name="log_out_dialog_confirm_button">LOG OUT</string>
    <string name="log_out_dialog_cancel_button">CANCEL</string>
    <string name="import_activity_wallet_model">Wallet Model</string>
    <string name="import_activity_account_model">Account Model</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about_activity_text">EVRAZ Wallet is the mobile application for Android that is for usage on Bitshares cryptocurrency platform.</string>
    <string name="about_activity_version">Version</string>
    <string name="about_activity_button">DONATE</string>
    <string name="send_account_to_hint">Type the account name</string>
    <string name="send_memo_hint">Optional</string>
    <string name="transaction_memo_hint">Tap to unlock the memo</string>
    <string name="transaction_unlock_memo_dialog_message">Type your password to unlock:</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_quotation">Quotes</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_buy">Buy</string>
    <string name="title_sell">Sell</string>
    <string name="title_my_orders">Orders</string>
    <string name="label_latest">Latest:</string>
    <string name="label_high">High:</string>
    <string name="label_low">Low:</string>
    <string name="label_volume">Vol:</string>
    <string name="label_hour_24">24h:</string>
    <string name="label_price">Price:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_total">Total:</string>
    <string name="label_fee">Fee:</string>
    <string name="label_balance">Available:</string>
    <string name="label_lowest_ask">Lowest ask:</string>
    <string name="label_highest_bid">Highest bid:</string>
    <string name="label_available">Available</string>
    <string name="label_reset">RESET</string>
    <string name="label_buy">BUY</string>
    <string name="label_sell">SELL</string>
    <string name="label_buy_order">BUY ORDER</string>
    <string name="label_sell_order">SELL ORDER</string>
    <string name="label_operation">Operation:</string>
    <string name="label_expiration">Expiration:</string>
    <string name="label_no_open_orders">You have no open orders now</string>
    <string name="label_cancel_order">CANCEL ORDER</string>
    <string name="label_please_confirm">Please confirm</string>
    <string name="label_type_password">Type your password to exchange</string>
    <string name="label_ok">OK</string>
    <string name="label_no">NO</string>
    <string name="text_price">Price</string>
    <string name="label_confirm_cancel_order">Are you sure you want to cancel this order?</string>
    <string name="menu_logout">Log out</string>
    <string name="import_account_name">Account Name:</string>
    <string name="import_password">Password:</string>
    <string name="label_memo">Memo:</string>
    <string name="label_from">From:</string>
    <string name="label_to">To:</string>
    <string name="tab_send">Send</string>
    <string name="tab_balances">Balance</string>
    <string name="tab_transactions">Transaction</string>
    <string name="title_currency_settings">Currency Settings</string>
    <string name="title_full_node_api_server_select">Full Node Api Server Select</string>
    <string name="title_select_currency">Choose a currency</string>
    <string name="title_select_api_server">Choose a Full Node Api Server</string>
    <string name="label_file_path">File Path:</string>
    <string name="label_select_file">Select File</string>
    <string name="label_private_key">Private Key:</string>
    <string name="label_bts_cny">bitCNY/BTS</string>
    <string name="label_bts">BTS</string>
    <string name="label_evraz">EVRAZ</string>
    <string name="label_cny">bitCNY</string>
    <string name="create_account_activity_title">Sign Up</string>
    <string name="create_account_password_confirm">Confirm password:</string>
    <string name="create_account_activity_button">SIGN UP</string>
    <string name="create_account_activity_network_fail">Failed to connect to server</string>
    <string name="create_account_activity_account_object_exist">The account has already existed</string>
    <string name="create_account_activity_response_fail">Server failed to response</string>
    <string name="create_account_activity_create_fail">Failed to sign up</string>
    <string name="create_account_account_name_error_full_letter">The account name cannot contain only letters</string>
    <string name="create_account_account_name_too_short">The account name is too short</string>
    <string name="create_account_account_name_error_start_letter">The account name should start with a letter</string>
    <string name="create_account_account_name_error_dash_end">The account name can not end with a dash</string>
    <string name="create_account_check_box">I confirm I have backed up my password (password is the only certification, you will lose all property if you lose it)</string>
    <string name="create_account_password_requirement">The password should include more than 12 characters with at least 1 capital letter and 1 number</string>
    <string name="create_account_password_confirm_error">Two passwords do not match</string>
    <string name="create_account_account_name_empty">The account name is empty</string>
    <string name="quotation_cureency_select_title">Quotation currency selection</string>
    <string name="label_change">Change:</string>
    <string name="loading_candle_data_failed">Failed to load data. Please try again later</string>
    <string name="loading_candle_data">Loading candle sticker chart</string>
</resources>