<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.ListPreference
        android:key="currency_setting"
        android:title="@string/title_currency_settings"
        android:dialogTitle="@string/title_select_currency"
        android:entries="@array/bts_currency_unit_options"
        android:entryValues="@array/bts_currency_unit_values"

        android:defaultValue="USD"/>

    <Preference
        android:key="full_node_api_server"
        android:title="@string/title_full_node_api_server_select"
        android:defaultValue="autoselect"/>

    <Preference
        android:key="quotation_currency_pair"
        android:title="@string/quotation_cureency_select_title" />

</PreferenceScreen>