<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/EvrazTitle"
        android:layout_width="match_parent"
        android:background="@android:color/black"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:text="@string/trading_schedule"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/background_color"
        android:orientation="vertical"
        android:paddingLeft="2dp"
        android:paddingRight="4dp">

        <LinearLayout
            android:id="@+id/layoutSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="09/22 16:00"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/label_high"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="13636.931"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/label_low"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="13630.931"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/label_change"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="-10%"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.mikephil.charting.charts.CombinedChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/layoutChartLoading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <com.wang.avi.AVLoadingIndicatorView
                    style="@style/AVLoadingIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:visibility="visible"
                    app:indicatorColor="@android:color/white"
                    app:indicatorName="LineScalePulseOutIndicator" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_candle_data"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLoadingError"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:src="@mipmap/error_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading_candle_data_failed"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/viewPagerSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#474545"
        android:checkedButton="@+id/buyButton"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/buyButton"
            style="@style/EvrazCustomSwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buy" />

        <RadioButton
            android:id="@+id/sellButton"
            style="@style/EvrazCustomSwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell" />

        <RadioButton
            android:id="@+id/ordersButton"
            style="@style/EvrazCustomSwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders" />

        <RadioButton
            android:id="@+id/myOrdersButton"
            style="@style/EvrazCustomSwitchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_orders" />


    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/beige_color" />

    <com.bitshares.bitshareswallet.NonScrollViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" />

</LinearLayout>
