<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray_color"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/beige_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pTextFirstView"
                style="@style/EvrazTextSellBuyTableStyle"
                android:text="@string/label_price" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/beige_color" />

            <EditText
                android:id="@+id/pEditText"
                style="@style/EvrazTextSellBuyTableStyle"
                android:background="@null"
                android:ems="8"
                android:gravity="end"
                android:inputType="numberDecimal"
                android:maxLines="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/beige_color" />

            <TextView
                android:id="@+id/pTextLastView"
                style="@style/EvrazTextSellBuyTableStyle"
                tools:text="@string/label_bts_cny" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/beige_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/qTextFirstView"
                style="@style/EvrazTextSellBuyTableStyle"
                android:text="@string/label_quantity" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/beige_color" />

            <EditText
                android:id="@+id/qEditText"
                style="@style/EvrazTextSellBuyTableStyle"
                android:background="@null"
                android:ems="8"
                android:gravity="end"
                android:inputType="numberDecimal"
                android:maxLines="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/beige_color" />

            <TextView
                android:id="@+id/qTextLastView"
                style="@style/EvrazTextSellBuyTableStyle"
                tools:text="@string/label_bts" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/beige_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tTextFirstView"
                style="@style/EvrazTextSellBuyTableStyle"
                android:text="@string/label_total" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/beige_color" />

            <EditText
                android:id="@+id/tEditText"
                style="@style/EvrazTextSellBuyTableStyle"
                android:background="@null"
                android:ems="8"
                android:gravity="end"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:maxLines="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/beige_color" />

            <TextView
                android:id="@+id/tTextLastView"
                style="@style/EvrazTextSellBuyTableStyle"
                tools:text="@string/label_cny" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/beige_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fTextFirstView"
                style="@style/EvrazTextSellBuyTableStyle"
                android:text="@string/label_fee" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/beige_color" />

            <EditText
                android:id="@+id/fEditText"
                style="@style/EvrazTextSellBuyTableStyle"
                android:background="@null"
                android:ems="8"
                android:gravity="end"
                android:enabled="false"
                android:inputType="numberDecimal"
                android:maxLines="1" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/beige_color" />

            <TextView
                android:id="@+id/fTextLastView"
                style="@style/EvrazTextSellBuyTableStyle"
                android:text="@string/label_bts" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/beige_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/label_balance"
                android:textColor="@color/beige_color" />

            <TextView
                android:id="@+id/balanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textColor="@color/beige_color" />

            <TextView
                android:id="@+id/balanceTextBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textColor="@color/beige_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/askTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="4dp"
                android:text="@string/label_lowest_ask"
                android:textColor="@color/beige_color" />

            <TextView
                android:id="@+id/askText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/beige_color" />

            <TextView
                android:id="@+id/askTextBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:textColor="@color/beige_color" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <Button
                android:id="@+id/okButton"
                style="@style/EvrazTextViewButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green_background"
                android:padding="4dp"
                android:text="@string/label_buy"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toRightOf="@+id/restButton"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/askTextInfo" />

            <Button
                android:id="@+id/restButton"
                style="@style/EvrazTextViewButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="18dp"
                android:layout_weight="1"
                android:background="@drawable/btn_red_background"
                android:padding="4dp"
                android:text="@string/label_reset"
                android:textColor="@android:color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
